eks/eks-kode-kloud/eks/manifests/network-policy-deny.yaml
# -- network policies to manage pod communication
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
